tests/ui/bitfield_attribute_wrong.stderr
error: encountered unsupported #[bitfield] attribute
 --> tests/ui/bitfield_attribute_wrong.rs:3:12
  |
3 | #[bitfield(unknown_attribute = 0)]
  |            ^^^^^^^^^^^^^^^^^
