tests/ui/bitfield_attribute_wrong.rs
use modular_bitfield::prelude::*;

#[bitfield(unknown_attribute = 0)]
struct Foo {
    value: u8,
}

fn main() {}
